[package]
name = "hello-eric"
version = "0.1.0"
authors = ["cwfitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "0.2.13"
features = ["full"]

[dependencies.reqwest]
version = "0.10"
